fix spacing for heart checkbox

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,6 +119,7 @@ h6 {
 .fav-and-cuter-div {
   display: inline;
   color: white;
+  text-align: center;
 }
 .state {
   width: fit-content;
@@ -152,6 +153,7 @@ h6 {
   display: flex;
   justify-content: center;
 }
+
 .form-label {
   color: white;
 }
